--- a/Conditional/HyperGraphConstructionFromState.tex
+++ b/Conditional/HyperGraphConstructionFromState.tex
@@ -1,6 +1,45 @@
 \documentclass[../Master.tex]{subfiles}
 \providecommand{\master}{..}
 \begin{document}
+
+Given a state transition $\left( s, a ,s' \right)$
+
+% \begin{algorithm}
+%     \caption{Constructing hypergraphs from a state}\label{algo:HypGraphCtor}
+%     \begin{algorithmic}
+%         \Function{$\textsc{ConstructHyperGraph}$} {$s$, $s'$, \texttt{HyperGraph} $U$, $K$}
+%             \ForAll{grounded predicates $q \left( o_1, \dots, o_{|q|} \right) \in s'$}
+%                 \ForAll{object $o \in o_1,\dots,o_{|q|}$}
+%                     \State{$v \gets Vertex 
+%                 \EndFor%
+%             \EndFor%
+%         \EndFunction%
+%     \end{algorithmic}
+% \end{algorithm}
+
+\begin{algorithm}
+    \caption{Algorithm for learning conditional effects using hypergraphs}\label{algo:CondEffLearn}
+    \begin{algorithmic}
+        \Function{$\textsc{Conditional-Effect-Learn}$} {$\left( s, a, s'\right)$, \texttt{HyperGraph} $U$, $K$}
+            \If {$s' \neq s$}
+                \State $C \gets C \cup \{ c(s) \}$
+            \ElsIf {$s' = s$}
+                \State $D \gets D \cup d(s)$
+            \EndIf
+
+            \State Reduce candidate sets by removing predicates disproven to preconditions:
+            \State $C' \gets \left\{ c \setminus D \; | \; c \in C' \right\}$
+
+            \State Add singleton sets from $C$ to $K$:
+            \State $K' \gets K \cup \left\{ p \; | \; \{ p \} \in C' \right\}$
+
+            \State Remove candidate sets containing predicates proven to be preconditions:
+            \State $C' \gets \left\{ c \; | \; c \in C' \land c \cap K \neq \emptyset \right\}$
+            \State \Return $(K', D', C')$
+        \EndFunction%
+    \end{algorithmic}
+\end{algorithm}
+
 \textsc{\texttt{Work in progress}}
 
 <TODO: Include explanation of how proven effects are combined with the hypergraphs of the preconditions>
