--- a/Learning.tex
+++ b/Learning.tex
@@ -8,7 +8,7 @@
     \subfile{Learning/Algorithm}\label{sec:Algorithm}
 
 \section{PDDL}
-<TODO: Explain how a world can be modeled as predicates (PDDL)>
+\subfile{Learning/PDDLWorld}
 
 \section{Sokoban in PDDL}
     \subfile{Learning/SokobanPDDL}\label{sec:SokobanPDDL}
