--- a/Learning/PDDLAlgorithm.tex
+++ b/Learning/PDDLAlgorithm.tex
@@ -11,7 +11,7 @@ When learning a PDDL environment, the \texttt{World} from Algorithm~\ref{algo:sc
 
 Given a PDDL problem, it is then the agent's task to reach the goal specified by the problem by learning the effects and preconditions of the relevant actions. Thus, in this instance the \textit{question} from algorithm~\ref{algo:science} is a PDDL problem, and the $canAnswer$ function consists of checking whether the problem has been solved in the given state (denoted $isSolved$).
 
-The most basic form of knowledge relevant to the PDDL agent is statements of fact about different fluent predicates' inclusion or exclusion from actions' preconditions and effects (although other knowledge constructs are also relevant, as shown in Sections~\ref{sec:NC:Effects} and~\ref{sec:NC:Preconditions}). From this limited information, the agent can form a hypothetical domain specification based on a given strategy. For example, if a predicate $p$ have neither been proven nor disproven to be a precondition of action $A$, the pessimistic agent will include it in its hypothetical action specification for $A$, while the optimistic agent will choose to ignore it. Both strategies will fully include proven and disproven knowledge. This hypothetical domain constitutes the \texttt{Hypothesis} from Algorithm~\ref{algo:science}.
+The most basic form of knowledge relevant to the PDDL agent is information about which fluent predicates are in its effects and preconditions. From this limited information, the agent can employ a strategy to construct hypothetical action specifications, constituting a hypothetical domain. For example, if a predicate $p$ have neither been proven nor disproven to be a precondition of action $A$, the pessimistic agent will include it in its hypothetical action specification for $A$, while the optimistic agent will choose to ignore it. Both strategies will fully include proven and disproven knowledge. This hypothetical domain constitutes the \texttt{Hypothesis} from Algorithm~\ref{algo:science}.
 
 Using a hypothetical domain (\texttt{Domain}) as described above, the agent can now attempt to form a plan for reaching the goal by conventional PDDL planning mechanisms. Such a plan is analoguous to an \texttt{Experiment}: If every action in the plan succeeds when applied to the world, the hypothetical domain is sufficient for solving the problem from the given state. If, however, execution of an action in the plan yields a state different from what the hypothetical domain predicts, then the hypothesis is flawed. Thus, \emph{conducting} an experiment in PDDL means executing a plan, which yields a new state as well as a \texttt{Result} indicating whether it failed or succeeded, and --- in the first case --- which transition caused the failure. An algorithm for the PDDL specific \textit{conduct} function is presented in Algorithm~\ref{algo:PDDLConduct}. 
 
